# CS3203-SPA

./: .gitattributes  .gitignore  README.md
Team30/Code30/src/spa/: CMakeLists.txt
Team30/Code30/src/spa/src/: DesignExtractor.cpp  PKB.cpp  PKB.h  Parser.cpp
Team30/Code30/src/spa/src/common/: AST.cpp  AST.h  SetUtils.h  Types.cpp  Types.h  UtilityTypes.h
Team30/Code30/src/spa/src/common/ASTNode/: ASTNode.cpp  ASTNode.h  AbstractBinaryASTNode.cpp  AbstractBinaryASTNode.h  BinaryASTNode.cpp  BinaryASTNode.h  ConstantASTNode.cpp  ConstantASTNode.h  IASTNode.cpp  IASTNode.h  ProcedureNode.cpp  ProcedureNode.h  StatementListNode.cpp  StatementListNode.h  VariableASTNode.cpp  VariableASTNode.h
Team30/Code30/src/spa/src/common/ast/: AST.cpp  AST.h  ASTNode.h  IAST.h  IASTNode.h
Team30/Code30/src/spa/src/common/cfg/: CFG.cpp  CFG.h  CFGLinks.cpp  CFGLinks.h
Team30/Code30/src/spa/src/common/data_structs/: AppendSet.h  BitField.cpp  BitField.h  VectorStack.h
Team30/Code30/src/spa/src/common/errors/: AbstractError.cpp  AbstractError.h
Team30/Code30/src/spa/src/common/lexer/: AsciiCharacters.h
Team30/Code30/src/spa/src/common/parser/: ISourceExpressionParser.h
Team30/Code30/src/spa/src/common/pattern/: ExpressionSequence.h  PatternConverter.cpp  PatternConverter.h  PatternNodeConverter.h  PatternTrie.cpp  PatternTrie.h  PatternTrieNode.cpp  (+3 more)
Team30/Code30/src/spa/src/pkb/: PkbTypes.h
Team30/Code30/src/spa/src/qps/: IQPS.h  IQueryDriver.h  QPSFacade.cpp  QPSFacade.h  QPSInitialiser.cpp  QPSInitialiser.h  QueryDriver.cpp  QueryDriver.h
Team30/Code30/src/spa/src/sp/: FileReader.cpp  FileReader.h  ISourceParser.h  ISp.h  ISpExpressionParser.h  SPTypes.h  SourceParser.cpp  SourceParser.h  SpDriver.cpp  SpDriver.h  SpFacade.cpp  SpFacade.h
(+1450 files in other folders)
